addup of startup probe, adjustment of application properties and securityConfig.java adjustments